<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WebPrint</string>
    <string name="action_settings">Settings</string>
    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="server_stopped">Server Stopped</string>
    <string name="server_running">Server Running</string>
    <string name="print_server_running">The WebPrint server is running</string>
    <string name="relay_port">Relay Port</string>
    <string name="printer_port">Printer Port</string>
    <string name="printer_host">Printer IP</string>
    <string name="access_request_title">Webprint Access Request</string>
    <string name="access_request_msg">%s is trying to access your usb &amp; network printers.\nWould you like to allow?\nOnly click yes for sites you trust.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="allowed_domains">Allowed Domains</string>
    <string name="service_port">Service port:</string>
    <string name="remove_domain">Remove access?</string>
    <string name="remove_domain_message">Revoke access to WebPrint for this site?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no_allowed_domains">No allowed domains yet</string>
</resources>
